Update CV - Feb 2026

--- a/index.html
+++ b/index.html
@@ -43,8 +43,14 @@
                 <span class="w-8 h-8 bg-purple-100 rounded-lg flex items-center justify-center">👤</span>
                 Profil
             </h2>
-            <p class="text-gray-600 leading-relaxed">
-                Durch meine Affinität für agiles Management und Planung können Sie einen kreativen und engagierten Mitarbeiter erwarten. Erfahrener IT-Spezialist mit Fokus auf Atlassian-Produkte. Über 10 Jahre Erfahrung in der Betreuung und Optimierung von Enterprise-Systemen. Teamleader mit nachgewiesener Fähigkeit, komplexe Projekte zu koordinieren und Prozesse zu automatisieren.
+            <p class="text-gray-600 leading-relaxed text-justify">
+                Durch meine Affinität für Atlassian und durch meine langjährige Erfahrung als Atlassian 
+                Solution-Architekt konnte ich bereits an spannenden Projekten für große und 
+                mittelständige Unternehmen erfolgreich umsetzen. Als erfahrener IT-Spezialist mit 
+                Fokus auf Atlassian Cloud Produkte, konnte ich in meinen 8 Jahren an beruflichen Erfahrungen
+                in der Betreuung und Optimierung von digitalisierten Prozessen mitwirken.
+                Sie können einen erfahrenen und loyalen Mitarbeiter erwarten, der gerne bereit ist,
+                 eine verantwortungsvolle Rolle in ihrem Unternehmen einzunehmen.  
             </p>
         </div>
 
@@ -78,7 +84,7 @@
                         <div class="border-l-2 border-gray-200 pl-6">
                             <div class="flex justify-between items-start mb-1">
                                 <h3 class="font-bold text-gray-800">Capability Owner</h3>
-                                <span class="text-purple-600 text-sm font-medium">10/2021 – 08/2025</span>
+                                <span class="text-gray-500 text-sm">10/2021 – 08/2025</span>
                             </div>
                             <p class="text-purple-600 font-medium text-sm mb-2">SENEC GmbH · Leipzig</p>
                             <ul class="text-gray-600 text-sm space-y-1">
@@ -166,8 +172,9 @@
                     <div class="flex flex-wrap gap-2">
                         <span class="tag">Jira</span>
                         <span class="tag">Confluence</span>
-                        <span class="tag">JQL</span>
+                        <span class="tag">KANBAN</span>
                         <span class="tag">SCRUM</span>
+                        <span class="tag">ITSM</span>
                         <span class="tag">ITIL</span>
                         <span class="tag">SAP</span>
                         <span class="tag">Python</span>
