--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <p class="text-xl text-purple-200 mb-4">Senior Atlassian Berater</p>
                     <div class="flex flex-wrap gap-4 text-sm">
                         <span class="flex items-center gap-2">📍 Leipzig, Deutschland</span>
-                        <span class="flex items-center gap-2">📧 reyesnapoles@gmx.net</span>
+                        <span class="flex items-center gap-2">📧 reyesnapoles@mail.de</span>
                     </div>
                 </div>
             </div>
