--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mario Reyes Napoles - Senior Atlassian Consultant</title>
+    <title>Mario Reyes Napoles - Senior Atlassian Solution Architect</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <style>
@@ -68,7 +68,7 @@
                     <p class="text-xl text-purple-200 mb-4" data-de="Senior Atlassian Berater" data-en="Senior Atlassian Consultant"></p>
                     <div class="flex flex-wrap gap-4 text-sm">
                         <span class="flex items-center gap-2">📍 Leipzig, <span data-de="Deutschland" data-en="Germany"></span></span>
-                        <span class="flex items-center gap-2">📧 reyesnapoles@gmx.net</span>
+                        <span class="flex items-center gap-2">📧 reyesnapoles@mail.de</span>
                     </div>
                 </div>
             </div>
