--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                      class="w-32 h-32 rounded-full object-cover border-4 border-white shadow-xl">
                 <div>
                     <h1 class="text-4xl font-bold mb-2">Mario Reyes Napoles</h1>
-                    <p class="text-xl text-purple-200 mb-4" data-de="Senior Atlassian Berater" data-en="Senior Atlassian Consultant"></p>
+                    <p class="text-xl text-purple-200 mb-4" data-de="Senior Atlassian Solution Architect" data-en="Senior Atlassian Consultant"></p>
                     <div class="flex flex-wrap gap-4 text-sm">
                         <span class="flex items-center gap-2">📍 Leipzig, <span data-de="Deutschland" data-en="Germany"></span></span>
                         <span class="flex items-center gap-2">📧 reyesnapoles@mail.de</span>
