Add Azure and Atlassian Solution Architect tags

--- a/index.html
+++ b/index.html
@@ -532,6 +532,7 @@
                             <span class="skill-tag secondary">Docker</span>
                             <span class="skill-tag secondary">Kubernetes</span>
                             <span class="skill-tag secondary">SAP</span>
+                            <span class="skill-tag secondary">Azure</span>
                         </div>
                     </div>
                     
@@ -540,6 +541,7 @@
                         <div class="skill-tags">
                             <span class="skill-tag secondary">Product Owner</span>
                             <span class="skill-tag secondary">Capability Owner</span>
+                            <span class="skill-tag secondary">Atlassian Solution Architect</span>
                         </div>
                     </div>
                 </section>
