--- a/index.html
+++ b/index.html
@@ -544,6 +544,16 @@
                             <span class="skill-tag secondary">Atlassian Solution Architect</span>
                         </div>
                     </div>
+
+                    <div class="skill-category">
+                        <div class="skill-category-title" data-de="Zertifikate" data-en="certificate"></div>
+                        <div class="skill-tags">
+                            <span class="skill-tag secondary">ACP-420</span>
+                            <span class="skill-tag secondary">ACP-120</span>
+                            <span class="skill-tag secondary">ACP-610</span>
+                            <span class="skill-tag secondary">ACH-800</span>
+                        </div>
+                    </div>
                 </section>
                 
                 <!-- Languages -->
