Fix spelling of 'certificate' in index.html

--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
                     </div>
 
                     <div class="skill-category">
-                        <div class="skill-category-title" data-de="Zertifikate" data-en="certificate"></div>
+                        <div class="skill-category-title" data-de="Zertifikate" data-en="Certificate"></div>
                         <div class="skill-tags">
                             <span class="skill-tag secondary">ACP-420</span>
                             <span class="skill-tag secondary">ACP-120</span>
